vcl/unx/gtk3/gtkinst.cxx
@@ -12127,6 +12127,13 @@ private:
         pThis->signal_activate();
     }
 
+    virtual void ensureMouseEventWidget() override
+    {
+        // The GtkEntry is sufficient to get mouse events without an intermediate GtkEventBox
+        if (!m_pMouseEventBox)
+            m_pMouseEventBox = m_pDelegate;
+    }
+
 protected:
 
     virtual void signal_activate()
